<resources>
    <string name="app_name">STP</string>

    <string name="app_title">STP</string>

    <string name="account_user_name">User name</string>
    <string name="account_password">Password</string>
    <string name="account_email">Email</string>
    <string name="account_repeat_password">Repeat password</string>
    <string name="btn_login">Login</string>
    <string name="btn_regist">Register</string>
</resources>
