<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@mipmap/img_bg"/>

    <LinearLayout
        android:id="@+id/layout_1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/app_title_text_size"
            android:text="@string/app_title"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/layout_user_name"
            android:layout_below="@+id/layout_1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white">
            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:lines="1"
                android:inputType="text"
                android:hint="@string/account_user_name"
                android:textSize="@dimen/regist_edit_text_size"
                android:text=""/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_email"
            android:layout_below="@+id/layout_user_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white">
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:lines="1"
                android:inputType="textEmailAddress"
                android:hint="@string/account_email"
                android:textSize="@dimen/regist_edit_text_size"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_password"
            android:layout_below="@+id/layout_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white">
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:lines="1"
                android:inputType="textPassword"
                android:hint="@string/account_password"
                android:textSize="@dimen/regist_edit_text_size"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_repeat_password"
            android:layout_below="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white">
            <EditText
                android:id="@+id/et_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:lines="1"
                android:inputType="textPassword"
                android:hint="@string/account_repeat_password"
                android:textSize="@dimen/regist_edit_text_size"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_regist"
            android:layout_below="@+id/layout_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
            <TextView
                android:id="@+id/tv_regist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@drawable/textview_border"
                android:textColor="@color/white"
                android:text="@string/btn_regist"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>